# tap

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.claude-plugin/: marketplace.json
.claude-plugin/plugins/rec/: plugin.json
.claude-plugin/plugins/rec/skills/: rec.md
.github/workflows/: ci.yml
crates/rec/: Cargo.toml
crates/rec/src/: main.rs
crates/record/: Cargo.toml
crates/record-client/src/: lib.rs
crates/record-protocol/: Cargo.toml
crates/record-protocol/src/: lib.rs
crates/record-server/: Cargo.toml
crates/record-server/src/: lib.rs
crates/record/src/: scrollback.rs
crates/tap/: Cargo.toml
crates/tap-client/src/: lib.rs
crates/tap-config/: Cargo.toml
crates/tap-config/src/: lib.rs
crates/tap-editor/: Cargo.toml
crates/tap-editor/src/: lib.rs
crates/tap-protocol/src/: lib.rs
crates/tap-server/: Cargo.toml
crates/tap-server/src/: editor.rs  input.rs  kitty.rs  lib.rs  scrollback.rs
crates/tap-server/tests/: nvim_integration.rs
crates/tap/src/: main.rs
