[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.30", features = ["term", "signal", "process", "fs"] }
bytes = "1"
dirs = "6"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
vt100 = "0.15"
