[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.metadata.crane]
name = "tap"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]

[workspace.dependencies]
# Internal crates
tap-protocol = { path = "crates/tap-protocol" }
tap-server = { path = "crates/tap-server" }
tap-client = { path = "crates/tap-client" }
tap-config = { path = "crates/tap-config" }

# External dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.30", features = ["term", "signal", "process", "fs"] }
bytes = "1"
dirs = "6"
clap = { version = "4", features = ["derive"] }
human-id = { git = "https://github.com/andrewgazelka/human-id" }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
vt100 = "0.15"
eyre = "0.6"
color-eyre = "0.6"
toml = "0.8"
tempfile = "3"
crossterm = "0.28"
