[package]
name = "record"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "PTY wrapper with Unix socket API for terminal introspection"

[[bin]]
name = "record"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nix.workspace = true
bytes.workspace = true
dirs.workspace = true
clap.workspace = true
uuid.workspace = true
parking_lot.workspace = true
chrono.workspace = true
vt100.workspace = true

[dev-dependencies]
tempfile = "3"
