[package]
name = "tap-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "PTY wrapper server library for terminal introspection"

[lib]
name = "tap_server"
path = "src/lib.rs"

[dependencies]
tap-protocol.workspace = true
tap-config.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
nix.workspace = true
bytes.workspace = true
human-id.workspace = true
parking_lot.workspace = true
chrono.workspace = true
vt100.workspace = true
eyre.workspace = true
tempfile.workspace = true
crossterm.workspace = true
tap-editor = { version = "0.1.0", path = "../tap-editor" }

[dev-dependencies]
tempfile.workspace = true
