[package]
name = "tap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for tap terminal sessions"

[[bin]]
name = "tap"
path = "src/main.rs"

[dependencies]
tap-protocol.workspace = true
tap-server.workspace = true
tap-client.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
color-eyre.workspace = true
dirs.workspace = true
chrono.workspace = true
